--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>973</width>
-    <height>300</height>
+    <height>166</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>166</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Frame</string>
