--- a/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
@@ -106,7 +106,7 @@ background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
       <enum>QTabWidget::South</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <property name="documentMode">
       <bool>true</bool>
@@ -251,7 +251,7 @@ border-bottom: 0px;
   <customwidget>
    <class>limit_dmus_region</class>
    <extends>QWidget</extends>
-   <header location="global">limit_dmus_region.h</header>
+   <header>limit_dmus_region.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
