--- a/NewGeneUI/NewGene/Widgets/CreateOutput/LimitDMUs/limit_dmus_region.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/LimitDMUs/limit_dmus_region.ui
@@ -58,7 +58,11 @@
           </widget>
          </item>
          <item>
-          <widget class="QListView" name="listView_limit_dmus_bottom_left_pane"/>
+          <widget class="QListView" name="listView_limit_dmus_bottom_left_pane">
+           <property name="selectionMode">
+            <enum>QAbstractItemView::MultiSelection</enum>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -119,7 +123,11 @@
           </widget>
          </item>
          <item>
-          <widget class="QListView" name="listView_limit_dmus_bottom_right_pane"/>
+          <widget class="QListView" name="listView_limit_dmus_bottom_right_pane">
+           <property name="selectionMode">
+            <enum>QAbstractItemView::MultiSelection</enum>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
