Add "recommended" to "Merge identical output rows" checkbox option text in UI

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
@@ -198,8 +198,6 @@
               </spacer>
              </item>
             </layout>
-            <zorder>label</zorder>
-            <zorder>verticalLayoutWidget_2</zorder>
             <zorder>verticalSpacer_8</zorder>
            </widget>
           </item>
@@ -228,7 +226,7 @@
           <item>
            <widget class="QCheckBox" name="mergeIdenticalRows">
             <property name="text">
-             <string>Merge identical adjacent output rows</string>
+             <string>Merge identical adjacent output rows (recommended)</string>
             </property>
            </widget>
           </item>
