Add text to user interface beneath "consolidate rows" option indicating that this selection is recommended unless exact statistical analysis is being performed

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
@@ -226,7 +226,8 @@
           <item>
            <widget class="QCheckBox" name="mergeIdenticalRows">
             <property name="text">
-             <string>Merge identical adjacent output rows (recommended)</string>
+             <string>Merge identical adjacent output rows
+(recommended except for exact statistical analysis)</string>
             </property>
            </widget>
           </item>
