Preparing to add path to open datasets

--- a/NewGeneUI/NewGene/Widgets/ManageInput/newgenemanageinput.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/newgenemanageinput.ui
@@ -20,11 +20,20 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="LabelManageInput">
      <property name="styleSheet">
       <string notr="true">QLabel
 {
