--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/newgeneselectvariables.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/newgeneselectvariables.ui
@@ -14,13 +14,22 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <property name="spacing">
     <number>0</number>
    </property>
-   <item row="2" column="0">
+   <item row="1" column="0">
     <widget class="QSplitter" name="splitter">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -48,18 +57,8 @@ stop:0.6 rgba(255, 255, 255, 0));
      <widget class="NewGeneVariableSummary" name="CreateOutputDataset_VariablesSplitter_VariableSummary" native="true"/>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="TimeRangeBox" name="frame">
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0">
-    <widget class="KAdColumnSelectionBox" name="frame_2">
+    <widget class="KAdColumnSelectionBox" name="frameKAdSelectionArea">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -87,12 +86,6 @@ stop:0.6 rgba(255, 255, 255, 0));
    <class>KAdColumnSelectionBox</class>
    <extends>QFrame</extends>
    <header>kadcolumnselectionbox.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>TimeRangeBox</class>
-   <extends>QFrame</extends>
-   <header>timerangebox.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
